Zentarim cr resrefs: faction fix

--- a/mod/itp/creaturepalcus.itp.yml
+++ b/mod/itp/creaturepalcus.itp.yml
@@ -4516,55 +4516,55 @@ MAIN:
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
             CR: {type: :float, value: 6.0}
-            FACTION: {type: :cexostr, value: Hostile}
+            FACTION: {type: :cexostr, value: Zentarim}
             NAME: {type: :cexostr, value: "Zentarim (Elitesch\xC3\xBCtze)"}
             RESREF: {type: :resref, value: zentarim_schutz3}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
             CR: {type: :float, value: 5.0}
-            FACTION: {type: :cexostr, value: Hostile}
+            FACTION: {type: :cexostr, value: Zentarim}
             NAME: {type: :cexostr, value: Zentarim (Elitesoldat)}
             RESREF: {type: :resref, value: zentarim_soldat3}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
             CR: {type: :float, value: 5.0}
-            FACTION: {type: :cexostr, value: Hostile}
+            FACTION: {type: :cexostr, value: Zentarim}
             NAME: {type: :cexostr, value: Zentarim (Erfahrener Magier)}
             RESREF: {type: :resref, value: zentarim_magier2}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
             CR: {type: :float, value: 4.0}
-            FACTION: {type: :cexostr, value: Hostile}
+            FACTION: {type: :cexostr, value: Zentarim}
             NAME: {type: :cexostr, value: "Zentarim (Erfahrener Sch\xC3\xBCtze)"}
             RESREF: {type: :resref, value: zentarim_schutz2}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
             CR: {type: :float, value: 4.0}
-            FACTION: {type: :cexostr, value: Hostile}
+            FACTION: {type: :cexostr, value: Zentarim}
             NAME: {type: :cexostr, value: Zentarim (Erfahrener Soldat)}
             RESREF: {type: :resref, value: zentarim_soldat2}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
             CR: {type: :float, value: 4.0}
-            FACTION: {type: :cexostr, value: Hostile}
+            FACTION: {type: :cexostr, value: Zentarim}
             NAME: {type: :cexostr, value: Zentarim (Magier)}
             RESREF: {type: :resref, value: zentarim_magier}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
             CR: {type: :float, value: 2.0}
-            FACTION: {type: :cexostr, value: Hostile}
+            FACTION: {type: :cexostr, value: Zentarim}
             NAME: {type: :cexostr, value: "Zentarim (Sch\xC3\xBCtze)"}
             RESREF: {type: :resref, value: zentarim_schutze}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
             CR: {type: :float, value: 7.0}
-            FACTION: {type: :cexostr, value: Hostile}
+            FACTION: {type: :cexostr, value: Zentarim}
             NAME: {type: :cexostr, value: Zentarim (Sehr erfahrener Magier)}
             RESREF: {type: :resref, value: zentarim_magier3}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
             CR: {type: :float, value: 2.0}
-            FACTION: {type: :cexostr, value: Hostile}
+            FACTION: {type: :cexostr, value: Zentarim}
             NAME: {type: :cexostr, value: Zentarim (Soldat)}
             RESREF: {type: :resref, value: zentarim_soldat}
           - !nwn-lib.elv.es,2008-12/struct 
