--- a/mod/utc/zentarim_magier3.utc.yml
+++ b/mod/utc/zentarim_magier3.utc.yml
@@ -42,12 +42,12 @@ ClassList:
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        Spell: {type: :word, value: 144}
+        Spell: {type: :word, value: 100}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        Spell: {type: :word, value: 100}
+        Spell: {type: :word, value: 144}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
@@ -88,6 +88,11 @@ ClassList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
+        Spell: {type: :word, value: 519}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
         Spell: {type: :word, value: 120}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
@@ -101,32 +106,27 @@ ClassList:
         Spell: {type: :word, value: 115}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        Spell: {type: :word, value: 519}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
     MemorizedList3: 
       type: :list
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        Spell: {type: :word, value: 59}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        Spell: {type: :word, value: 59}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
         Spell: {type: :word, value: 41}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         Spell: {type: :word, value: 41}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 59}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 59}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
     MemorizedList4: 
@@ -169,19 +169,19 @@ Equip_ItemList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 2, EquippedRes: {type: :resref, value: zentarim_robe}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16, EquippedRes: {type: :resref, value: drachenszepter_l}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 64, EquippedRes: {type: :resref, value: umhang062}}
-FactionID: {type: :word, value: 1}
+FactionID: {type: :word, value: 14}
 FeatList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 40}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 22}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 944}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 7}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 946}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 22}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 258}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 945}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 944}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 51}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 303}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 946}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 40}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 51}}
 FirstName: 
   type: :cexolocstr
   value: 
@@ -252,6 +252,7 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
 SoundSetFile: {type: :word, value: 164}
 SpecAbilityList: 
   type: :list
@@ -261,14 +262,14 @@ StartingPackage: {type: :byte, value: 10}
 Str: {type: :byte, value: 10}
 Subrace: {type: :cexostr, value: ""}
 Tag: {type: :cexostr, value: ZentarimMagier}
-Tail: {type: :byte, value: 0}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
 TemplateResRef: {type: :resref, value: zentarim_magier3}
 WalkRate: {type: :int, value: 4}
-Wings: {type: :byte, value: 0}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 12}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
