--- a/mod/utc/zentarim_soldat3.utc.yml
+++ b/mod/utc/zentarim_soldat3.utc.yml
@@ -55,24 +55,24 @@ Equip_ItemList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16, EquippedRes: {type: :resref, value: langschwert001}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32, EquippedRes: {type: :resref, value: grosserschild008}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 64, EquippedRes: {type: :resref, value: umhang062}}
-FactionID: {type: :word, value: 1}
+FactionID: {type: :word, value: 14}
 FeatList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 40}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 2}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 3}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 4}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 6}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 10}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 389}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 6}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 14}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 28}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 258}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 3}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 2}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 32}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 46}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 45}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 40}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 106}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 45}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 46}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 144}}
 FirstName: 
   type: :cexolocstr
@@ -144,6 +144,7 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 1}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 2}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
 SoundSetFile: {type: :word, value: 178}
 SpecAbilityList: 
   type: :list
@@ -153,14 +154,14 @@ StartingPackage: {type: :byte, value: 4}
 Str: {type: :byte, value: 16}
 Subrace: {type: :cexostr, value: ""}
 Tag: {type: :cexostr, value: ZentarimSoldat}
-Tail: {type: :byte, value: 0}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
 TemplateResRef: {type: :resref, value: zentarim_soldat3}
 WalkRate: {type: :int, value: 4}
-Wings: {type: :byte, value: 0}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 11}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
