--- a/mod/area/gabel_dela.git.yml
+++ b/mod/area/gabel_dela.git.yml
@@ -105,7 +105,7 @@ Door List:
     HP: {type: :short, value: 15}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: gab_s_betetmer}
+    KeyName: {type: :cexostr, value: gabel_dela}
     KeyRequired: {type: :byte, value: 0}
     LinkedTo: {type: :cexostr, value: gabel_sueden_2_gabel_dela}
     LinkedToFlags: {type: :byte, value: 1}
