--- a/mod/area/gabel_sueden.git.yml
+++ b/mod/area/gabel_sueden.git.yml
@@ -4075,7 +4075,7 @@ Door List:
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
     Bearing: {type: :float, value: -0.0}
-    CloseLockDC: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 27}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 15}
     Description: 
@@ -4090,7 +4090,7 @@ Door List:
     HP: {type: :short, value: 15}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
+    KeyName: {type: :cexostr, value: gabel_dela}
     KeyRequired: {type: :byte, value: 0}
     LinkedTo: {type: :cexostr, value: gabel_dela_2_gabel_sueden}
     LinkedToFlags: {type: :byte, value: 1}
@@ -4100,8 +4100,8 @@ Door List:
       str_ref: 14445
       value: 
         0: Fancy Door 01b
-    Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 0}
+    Lockable: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
     OnClosed: {type: :resref, value: door_closed}
     OnDamaged: {type: :resref, value: door_damaged}
@@ -4116,7 +4116,7 @@ Door List:
     OnTrapTriggered: {type: :resref, value: door_traptrig}
     OnUnlock: {type: :resref, value: door_unlock}
     OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 18}
+    OpenLockDC: {type: :byte, value: 40}
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 558}
     Ref: {type: :byte, value: 0}
