Revert "Gabel Kan: Koboldland"
This reverts commit d5a70cf8fb4e2f876b3d29175001524b2437dc19.

--- a/mod/area/gabkansw.git.yml
+++ b/mod/area/gabkansw.git.yml
@@ -363,14 +363,8 @@ Creature List:
         __struct_id: 0
         Comment: {type: :cexostr, value: ""}
         Rank: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Comment: {type: :cexostr, value: ""}
-        Rank: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Comment: {type: :cexostr, value: ""}
-        Rank: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
       - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
       - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
       - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
@@ -3503,184 +3497,6 @@ Encounter List:
     TemplateResRef: {type: :resref, value: ratten}
     XPosition: {type: :float, value: 12.882}
     YPosition: {type: :float, value: 14.6696}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 305}
-        CR: {type: :float, value: 0.5}
-        ResRef: {type: :resref, value: koboldschtze}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 300}
-        CR: {type: :float, value: 1.0}
-        ResRef: {type: :resref, value: koboldkrieger}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 300}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: koboldschtze001}
-        SingleSpawn: {type: :byte, value: 1}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 303}
-        CR: {type: :float, value: 4.0}
-        ResRef: {type: :resref, value: koboldkrieger001}
-        SingleSpawn: {type: :byte, value: 1}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 2}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.024}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: -8.3074}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 11.3279}
-        Y: {type: :float, value: -8.631}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 9.1702}
-        Y: {type: :float, value: -0.4318}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Kobolde, normal
-    MaxCreatures: {type: :int, value: 8}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 2}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 1800}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 54.1534}
-        Y: {type: :float, value: 68.6635}
-        Z: {type: :float, value: 0.0045}
-    Tag: {type: :cexostr, value: Kobolt_normal}
-    TemplateResRef: {type: :resref, value: kobolt_normal}
-    XPosition: {type: :float, value: 44.3361}
-    YPosition: {type: :float, value: 97.5771}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 305}
-        CR: {type: :float, value: 0.5}
-        ResRef: {type: :resref, value: koboldschtze}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 300}
-        CR: {type: :float, value: 1.0}
-        ResRef: {type: :resref, value: koboldkrieger}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 300}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: koboldschtze001}
-        SingleSpawn: {type: :byte, value: 1}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 303}
-        CR: {type: :float, value: 4.0}
-        ResRef: {type: :resref, value: koboldkrieger001}
-        SingleSpawn: {type: :byte, value: 1}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 2}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -0.3246}
-        Y: {type: :float, value: -6.0246}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 2.7235}
-        Y: {type: :float, value: -6.0153}
-        Z: {type: :float, value: -0.0647}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 2.5131}
-        Y: {type: :float, value: -0.3331}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Kobolde, normal
-    MaxCreatures: {type: :int, value: 8}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 2}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 1800}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 43.0345}
-        Y: {type: :float, value: 68.5612}
-        Z: {type: :float, value: 0.0045}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 73.4037}
-        Y: {type: :float, value: 25.0233}
-        Z: {type: :float, value: 0.0}
-    Tag: {type: :cexostr, value: Kobolt_normal}
-    TemplateResRef: {type: :resref, value: kobolt_normal}
-    XPosition: {type: :float, value: 93.2312}
-    YPosition: {type: :float, value: 52.9257}
     ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
@@ -12330,27 +12146,27 @@ TriggerList:
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.024}
+        PointZ: {type: :float, value: 0.0240000002086163}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
-        PointY: {type: :float, value: -0.1182}
-        PointZ: {type: :float, value: 0.024}
+        PointY: {type: :float, value: -0.118199996650219}
+        PointZ: {type: :float, value: 0.0240000002086163}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.0788}
-        PointY: {type: :float, value: -1.379}
-        PointZ: {type: :float, value: 0.024}
+        PointX: {type: :float, value: 0.0788000002503395}
+        PointY: {type: :float, value: -1.37899994850159}
+        PointZ: {type: :float, value: 0.0240000002086163}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 13.8687}
-        PointY: {type: :float, value: -1.4184}
-        PointZ: {type: :float, value: 0.025}
+        PointX: {type: :float, value: 13.8687000274658}
+        PointY: {type: :float, value: -1.41840004920959}
+        PointZ: {type: :float, value: 0.025000000372529}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 13.8687}
+        PointX: {type: :float, value: 13.8687000274658}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025}
+        PointZ: {type: :float, value: 0.025000000372529}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_GabKan_W_GabKan_SW}
@@ -12395,39 +12211,39 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -1.3091}
-        PointY: {type: :float, value: -0.0748}
-        PointZ: {type: :float, value: 0.025}
+        PointX: {type: :float, value: -1.30910003185272}
+        PointY: {type: :float, value: -0.0747999995946884}
+        PointZ: {type: :float, value: 0.025000000372529}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -1.1974}
-        PointY: {type: :float, value: -12.5153}
-        PointZ: {type: :float, value: 0.1026}
+        PointX: {type: :float, value: -1.19739997386932}
+        PointY: {type: :float, value: -12.5152997970581}
+        PointZ: {type: :float, value: 0.102600000798702}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.748}
-        PointY: {type: :float, value: -12.4174}
-        PointZ: {type: :float, value: 0.025}
+        PointX: {type: :float, value: -0.748000025749207}
+        PointY: {type: :float, value: -12.4174003601074}
+        PointZ: {type: :float, value: 0.025000000372529}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.7259}
-        PointY: {type: :float, value: -13.8816}
-        PointZ: {type: :float, value: 0.0891}
+        PointX: {type: :float, value: -0.725899994373322}
+        PointY: {type: :float, value: -13.8816003799438}
+        PointZ: {type: :float, value: 0.0891000032424927}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.0135}
-        PointY: {type: :float, value: -13.8816}
-        PointZ: {type: :float, value: 0.025}
+        PointX: {type: :float, value: 0.0135000003501773}
+        PointY: {type: :float, value: -13.8816003799438}
+        PointZ: {type: :float, value: 0.025000000372529}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025}
+        PointZ: {type: :float, value: 0.025000000372529}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
-        PointY: {type: :float, value: 0.0374}
-        PointZ: {type: :float, value: 0.025}
+        PointY: {type: :float, value: 0.0373999997973442}
+        PointZ: {type: :float, value: 0.025000000372529}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_GabKan_S_GabKan_SW}
