--- a/mod/area/gabel_winery.are.yml
+++ b/mod/area/gabel_winery.are.yml
@@ -27,7 +27,7 @@ MoonShadows: {type: byte, value: 0}
 Name:
   type: cexolocstr
   value:
-    0: An der Gabel - Weinkeller Khorist
+    0: An der Gabel - Rauvinbräu
 NoRest: {type: byte, value: 0}
 OnEnter: {type: resref, value: sr_enter_inside}
 OnExit: {type: resref, value: _area_leave}
@@ -220,12 +220,12 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 439}
-    Tile_MainLight1: {type: byte, value: 0}
-    Tile_MainLight2: {type: byte, value: 14}
+    Tile_ID: {type: int, value: 388}
+    Tile_MainLight1: {type: byte, value: 30}
+    Tile_MainLight2: {type: byte, value: 13}
     Tile_Orientation: {type: int, value: 1}
-    Tile_SrcLight1: {type: byte, value: 0}
-    Tile_SrcLight2: {type: byte, value: 0}
+    Tile_SrcLight1: {type: byte, value: 3}
+    Tile_SrcLight2: {type: byte, value: 3}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
     Tile_AnimLoop1: {type: byte, value: 1}
@@ -280,12 +280,12 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 389}
+    Tile_ID: {type: int, value: 388}
     Tile_MainLight1: {type: byte, value: 30}
-    Tile_MainLight2: {type: byte, value: 0}
+    Tile_MainLight2: {type: byte, value: 14}
     Tile_Orientation: {type: int, value: 0}
-    Tile_SrcLight1: {type: byte, value: 0}
-    Tile_SrcLight2: {type: byte, value: 0}
+    Tile_SrcLight1: {type: byte, value: 3}
+    Tile_SrcLight2: {type: byte, value: 3}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
     Tile_AnimLoop1: {type: byte, value: 1}
@@ -352,9 +352,9 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 389}
-    Tile_MainLight1: {type: byte, value: 4}
-    Tile_MainLight2: {type: byte, value: 14}
+    Tile_ID: {type: int, value: 388}
+    Tile_MainLight1: {type: byte, value: 30}
+    Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 0}
     Tile_SrcLight2: {type: byte, value: 0}
