Nord: Mausoleum: fix typo in name

--- a/mod/area/gabelstr_nord_m0.are.yml
+++ b/mod/area/gabelstr_nord_m0.are.yml
@@ -27,7 +27,7 @@ MoonShadows: {type: byte, value: 0}
 Name:
   type: cexolocstr
   value:
-    0: Gabelstrasse Nord - Mausuleom
+    0: Gabelstraße Nord - Mausoleum
 NoRest: {type: byte, value: 0}
 OnEnter: {type: resref, value: sr_enter_inside}
 OnExit: {type: resref, value: _area_leave}
