Festung/Huegel: fix for zentarim

--- a/mod/area/huegel_outpost1.git.yml
+++ b/mod/area/huegel_outpost1.git.yml
@@ -40,7 +40,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_ranger_outpost}
+    KeyName: {type: cexostr, value: key_zfeste_outpost}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: huegel_s03_o01_outdoor}
     LinkedToFlags: {type: byte, value: 1}
