--- a/mod/area/huegel_owen.git.yml
+++ b/mod/area/huegel_owen.git.yml
@@ -254,7 +254,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_huegel_owen}
+    KeyName: {type: cexostr, value: key_zfeste_owen}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_owen_outdoor}
     LinkedToFlags: {type: byte, value: 1}
@@ -316,7 +316,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_huegel_owen}
+    KeyName: {type: cexostr, value: key_zfeste_owen}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
