--- a/mod/area/huegel_ranger_1g.are.yml
+++ b/mod/area/huegel_ranger_1g.are.yml
@@ -27,7 +27,7 @@ MoonShadows: {type: byte, value: 0}
 Name:
   type: cexolocstr
   value:
-    0: Das Hügelland - Die Hüterfeste - 1. Stock
+    0: Das Hügelland - Die Festung - 1. Stock
 NoRest: {type: byte, value: 0}
 OnEnter: {type: resref, value: sr_enter_inside}
 OnExit: {type: resref, value: _area_leave}
