--- a/mod/area/huegel_ranger_1g.git.yml
+++ b/mod/area/huegel_ranger_1g.git.yml
@@ -40,7 +40,7 @@ Door List:
     HP: {type: short, value: 15}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste_caiden}
+    KeyName: {type: cexostr, value: key_zfeste_caiden}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -100,7 +100,7 @@ Door List:
     HP: {type: short, value: 15}
     Hardness: {type: byte, value: 20}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste_wiz}
+    KeyName: {type: cexostr, value: key_zfeste_wiz}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -161,7 +161,7 @@ Door List:
     HP: {type: short, value: 15}
     Hardness: {type: byte, value: 6}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste_wiz}
+    KeyName: {type: cexostr, value: key_zfeste_wiz}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -222,7 +222,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -284,7 +284,7 @@ Door List:
     HP: {type: short, value: 15}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -346,7 +346,7 @@ Door List:
     HP: {type: short, value: 30}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_out_2_hfeste_1g}
     LinkedToFlags: {type: byte, value: 1}
@@ -408,7 +408,7 @@ Door List:
     HP: {type: short, value: 15}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste_vash}
+    KeyName: {type: cexostr, value: key_zfeste_vash}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_pr_2_hfeste_1g}
     LinkedToFlags: {type: byte, value: 1}
@@ -470,7 +470,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -532,7 +532,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
