--- a/mod/area/huegel_ranger_2g.git.yml
+++ b/mod/area/huegel_ranger_2g.git.yml
@@ -40,7 +40,7 @@ Door List:
     HP: {type: short, value: 30}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_out_s_2_hfeste_2g}
     LinkedToFlags: {type: byte, value: 1}
@@ -102,7 +102,7 @@ Door List:
     HP: {type: short, value: 30}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_out_n_2_hfeste_2g}
     LinkedToFlags: {type: byte, value: 1}
@@ -164,7 +164,7 @@ Door List:
     HP: {type: short, value: 30}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_out_o_2_hfeste_2g}
     LinkedToFlags: {type: byte, value: 1}
@@ -226,7 +226,7 @@ Door List:
     HP: {type: short, value: 60}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -287,7 +287,7 @@ Door List:
     HP: {type: short, value: 60}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -348,7 +348,7 @@ Door List:
     HP: {type: short, value: 60}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -409,7 +409,7 @@ Door List:
     HP: {type: short, value: 60}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -470,7 +470,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -532,7 +532,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -594,7 +594,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -656,7 +656,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -718,7 +718,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_roof_2_hfeste_2g_z}
     LinkedToFlags: {type: byte, value: 1}
