--- a/mod/area/huegel_ranger_eg.git.yml
+++ b/mod/area/huegel_ranger_eg.git.yml
@@ -40,7 +40,7 @@ Door List:
     HP: {type: short, value: 60}
     Hardness: {type: byte, value: 8}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -102,7 +102,7 @@ Door List:
     HP: {type: short, value: 60}
     Hardness: {type: byte, value: 8}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -163,7 +163,7 @@ Door List:
     HP: {type: short, value: 60}
     Hardness: {type: byte, value: 8}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -224,7 +224,7 @@ Door List:
     HP: {type: short, value: 60}
     Hardness: {type: byte, value: 8}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -347,7 +347,7 @@ Door List:
     HP: {type: short, value: 100}
     Hardness: {type: byte, value: 15}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste_main}
+    KeyName: {type: cexostr, value: key_zfeste_main}
     KeyRequired: {type: byte, value: 1}
     LinkedTo: {type: cexostr, value: hfeste_out_2_hfeste_eg_main}
     LinkedToFlags: {type: byte, value: 1}
@@ -410,7 +410,7 @@ Door List:
     HP: {type: short, value: 60}
     Hardness: {type: byte, value: 15}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
