--- a/mod/area/huegel_ranger_pr.git.yml
+++ b/mod/area/huegel_ranger_pr.git.yml
@@ -101,7 +101,7 @@ Door List:
     HP: {type: short, value: 15}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste_vash}
+    KeyName: {type: cexostr, value: key_zfeste_vash}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_1g_2_hfeste_pr}
     LinkedToFlags: {type: byte, value: 1}
