--- a/mod/area/huegel_ranger_ug.git.yml
+++ b/mod/area/huegel_ranger_ug.git.yml
@@ -752,7 +752,7 @@ Door List:
     HP: {type: short, value: 15}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -935,7 +935,7 @@ Door List:
     HP: {type: short, value: 60}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -996,7 +996,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
@@ -1058,7 +1058,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
