--- a/mod/area/huegel_s03_o01.git.yml
+++ b/mod/area/huegel_s03_o01.git.yml
@@ -41,7 +41,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_ranger_outpost}
+    KeyName: {type: cexostr, value: key_zfeste_outpost}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: huegel_s03_o01_indoor1}
     LinkedToFlags: {type: byte, value: 1}
@@ -433,7 +433,7 @@ Placeable List:
       type: cexolocstr
       str_ref: 14561
       value:
-        0: Aussenposten der Hüter
+        0: Aussenposten
     Lockable: {type: byte, value: 0}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
