--- a/mod/area/huegel_s05_o01.git.yml
+++ b/mod/area/huegel_s05_o01.git.yml
@@ -1688,7 +1688,7 @@ Door List:
     HP: {type: short, value: 30}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_2g_2_hfeste_walk_o}
     LinkedToFlags: {type: byte, value: 1}
@@ -1750,7 +1750,7 @@ Door List:
     HP: {type: short, value: 30}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_2g_z_2_hfeste_roof}
     LinkedToFlags: {type: byte, value: 1}
@@ -1812,7 +1812,7 @@ Door List:
     HP: {type: short, value: 30}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_2g_2_hfeste_walk_s}
     LinkedToFlags: {type: byte, value: 1}
@@ -1874,7 +1874,7 @@ Door List:
     HP: {type: short, value: 30}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_1g_2_hfeste_outdoor}
     LinkedToFlags: {type: byte, value: 1}
@@ -1937,7 +1937,7 @@ Door List:
     HP: {type: short, value: 100}
     Hardness: {type: byte, value: 15}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste_main}
+    KeyName: {type: cexostr, value: key_zfeste_main}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_eg_main_2_hfeste_outdoor}
     LinkedToFlags: {type: byte, value: 1}
@@ -1999,7 +1999,7 @@ Door List:
     HP: {type: short, value: 30}
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_hfeste}
+    KeyName: {type: cexostr, value: key_zfeste}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: hfeste_2g_2_hfeste_walk_n}
     LinkedToFlags: {type: byte, value: 1}
@@ -2061,7 +2061,7 @@ Door List:
     HP: {type: short, value: 20}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: key_huegel_owen}
+    KeyName: {type: cexostr, value: key_zfeste_owen}
     KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: huegel_owen_indoor}
     LinkedToFlags: {type: byte, value: 1}
@@ -10022,7 +10022,7 @@ Placeable List:
       type: cexolocstr
       str_ref: 14561
       value:
-        0: Die Feste der Hüter
+        0: Die Festung
     Lockable: {type: byte, value: 0}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
