--- a/mod/area/huegel_ranger_pr.are.yml
+++ b/mod/area/huegel_ranger_pr.are.yml
@@ -27,7 +27,7 @@ MoonShadows: {type: byte, value: 1}
 Name:
   type: cexolocstr
   value:
-    0: Das Hügelland - Die Hüterfeste - Privatgemach
+    0: Das Hügelland - Die Festung - Privatgemach
 NoRest: {type: byte, value: 0}
 OnEnter: {type: resref, value: sr_enter_inside}
 OnExit: {type: resref, value: _area_leave}
