--- a/mod/area/huegel_s05_o01.are.yml
+++ b/mod/area/huegel_s05_o01.are.yml
@@ -27,7 +27,7 @@ MoonShadows: {type: byte, value: 1}
 Name:
   type: cexolocstr
   value:
-    0: Das Hügelland - Die Hüterfeste
+    0: Das Hügelland - Die Festung
 NoRest: {type: byte, value: 0}
 OnEnter: {type: resref, value: sr_enter_hills}
 OnExit: {type: resref, value: _area_leave}
