add haks for sens underdark, icy caverns

--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -661,6 +661,8 @@ Mod_HakList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: silm_tiles_1_20}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: bvi80_place}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: bvi80_dds}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: silm_sen_ud}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: silm_sen_icycav}}
 Mod_ID: {type: void, value: 6342a521a9f1b4ea321eadf0fa3b1e88}
 Mod_IsSaveGame: {type: byte, value: 0}
 Mod_MinGameVer: {type: cexostr, value: '1.69'}
