Vordron Ran's Hut: fix NPC scripts

--- a/mod/area/vordrorn_ranshut.git.yml
+++ b/mod/area/vordrorn_ranshut.git.yml
@@ -128,7 +128,7 @@ Creature List:
     ScriptOnBlocked: {type: resref, value: nw_c2_defaulte}
     ScriptOnNotice: {type: resref, value: nw_c2_default2}
     ScriptRested: {type: resref, value: nw_c2_defaulta}
-    ScriptSpawn: {type: resref, value: nw_c2_omnivore}
+    ScriptSpawn: {type: resref, value: nw_c2_default9}
     ScriptSpellAt: {type: resref, value: nw_c2_defaultb}
     ScriptUserDefine: {type: resref, value: nw_c2_defaultd}
     SkillList:
@@ -532,7 +532,7 @@ Creature List:
     ScriptOnBlocked: {type: resref, value: nw_c2_defaulte}
     ScriptOnNotice: {type: resref, value: nw_c2_default2}
     ScriptRested: {type: resref, value: nw_c2_defaulta}
-    ScriptSpawn: {type: resref, value: nw_c2_herbivore}
+    ScriptSpawn: {type: resref, value: nw_c2_default9}
     ScriptSpellAt: {type: resref, value: nw_c2_defaultb}
     ScriptUserDefine: {type: resref, value: nw_c2_defaultd}
     SkillList:
@@ -667,7 +667,7 @@ Creature List:
     ScriptOnBlocked: {type: resref, value: nw_c2_defaulte}
     ScriptOnNotice: {type: resref, value: nw_c2_default2}
     ScriptRested: {type: resref, value: nw_c2_defaulta}
-    ScriptSpawn: {type: resref, value: nw_c2_herbivore}
+    ScriptSpawn: {type: resref, value: nw_c2_default9}
     ScriptSpellAt: {type: resref, value: nw_c2_defaultb}
     ScriptUserDefine: {type: resref, value: nw_c2_defaultd}
     SkillList:
@@ -802,7 +802,7 @@ Creature List:
     ScriptOnBlocked: {type: resref, value: nw_c2_defaulte}
     ScriptOnNotice: {type: resref, value: nw_c2_default2}
     ScriptRested: {type: resref, value: nw_c2_defaulta}
-    ScriptSpawn: {type: resref, value: nw_c2_bat9}
+    ScriptSpawn: {type: resref, value: nw_c2_default9}
     ScriptSpellAt: {type: resref, value: nw_c2_defaultb}
     ScriptUserDefine: {type: resref, value: nw_c2_defaultd}
     SkillList:
